# hitman-behavior

./: Cargo.toml  build.rs  h1-classes.txt  h2-classes.txt  h3-classes.txt  h3-enums.txt
.github/workflows/: artifact.yml
src/: general.rs  general_nice.rs  h1.rs  h2.rs  h3.rs  lib.rs  main.rs
