[package]
name = "hitman-behavior"
version = "0.1.0"
edition = "2024"

[dependencies]
ecow = "0.2.6"
hitman-bin1 = { git = "https://github.com/atampy25/hitman-bin1", features = ["h1", "h3"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tryvial = "0.2.0"
Inflector = "0.11.4"

[build-dependencies]
anyhow = "1.0.100"
codegen = "0.2.0"
Inflector = "0.11.4"
lazy-regex = "3.4.1"

[profile.dev.package.hitman-bin1]
debug = false
