[package]
name = "hitman-behavior"
version = "0.1.0"
edition = "2024"

[dependencies]
ecow = "0.3.0"
glacier-bin1 = { git = "https://github.com/atampy25/glacier-bin1", features = [
    "h1",
    "h2",
    "h3",
    "enums",
] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tryvial = "0.2.0"
Inflector = "0.11.4"

[build-dependencies]
anyhow = "1.0.100"
codegen = "0.3.0"
Inflector = "0.11.4"
lazy-regex = "3.4.1"

[profile.dev.package.glacier-bin1]
debug = false
